# rubsd

CVSROOT/: commitinfo  config  loginfo  modules
mystuff/: Makefile
mystuff/converters/: Makefile  Makefile.inc
mystuff/converters/p5-Encode/: Makefile  distinfo
mystuff/devel/: Makefile
mystuff/devel/cvsd/: Makefile  distinfo
mystuff/devel/libbegemot/: Makefile  distinfo
mystuff/devel/p5-Class-Mix/: Makefile  distinfo
mystuff/devel/p5-Data-Float/: Makefile  distinfo
mystuff/devel/p5-Data-Integer/: Makefile  distinfo
mystuff/devel/p5-Module-Runtime/: Makefile  distinfo
mystuff/devel/p5-Params-Classify/: Makefile  distinfo
mystuff/devel/p5-Scalar-List-Utils/: Makefile
mystuff/devel/p5-Scalar-String/: Makefile  distinfo
mystuff/devel/p5-parent/: Makefile  distinfo
mystuff/emulators/: Makefile
mystuff/emulators/p11/: Makefile  distinfo
mystuff/emulators/xhomer/: Makefile
mystuff/mail/: Makefile
mystuff/mail/mail.buhal/: Makefile  distinfo
mystuff/mail/p5-Mail-Sendmail/: Makefile  distinfo
mystuff/net/: Makefile  Makefile.inc
mystuff/net/ircd-hybrid/: Makefile
mystuff/net/ircyka/: Makefile
mystuff/net/licq/: Makefile  Makefile.inc  distinfo
mystuff/net/qutim/: Makefile  Makefile.inc  distinfo
mystuff/net/sim-im/: Makefile  distinfo
mystuff/net/sim-im-devel/: Makefile  distinfo
mystuff/net/wireshark/: Makefile  distinfo
mystuff/net/xchat1/: Makefile
mystuff/security/: Makefile
mystuff/security/p5-Authen-DecHpwd/: Makefile  distinfo
mystuff/security/p5-Authen-Passphrase/: Makefile  distinfo
mystuff/security/p5-Crypt-Eksblowfish/: Makefile
mystuff/security/p5-Crypt-MySQL/: Makefile  distinfo
mystuff/security/p5-Crypt-UnixCrypt_XS/: Makefile  distinfo
mystuff/security/p5-Data-Entropy/: Makefile
mystuff/sysutils/memtest86/: Makefile  distinfo
mystuff/sysutils/memtest86+/: Makefile  distinfo
mystuff/www/: Makefile
mystuff/www/ikiwiki/: Makefile  distinfo
mystuff/x11/: Makefile
mystuff/x11/fvwm25/: Makefile  distinfo
ports/audio/: Makefile.inc
ports/audio/aylet/: Makefile  distinfo
ports/audio/gnump3d/: Makefile  distinfo
ports/comms/birda/: Makefile  distinfo
ports/databases/postgresql/: Makefile  distinfo
ports/editors/joe/: Makefile
ports/emulators/: Makefile.inc
ports/emulators/BasiliskII/: Makefile
ports/emulators/fuse/: Makefile  distinfo
ports/emulators/spectemu/: Makefile
ports/emulators/vMac/: Makefile  distinfo
ports/emulators/xhomer/: Makefile  distinfo
ports/emulators/xzx-pro/: Makefile  distinfo
ports/fido/: Makefile
ports/fido/binkd/: Makefile  distinfo
ports/fido/husky/: Makefile
ports/mail/mail.buhal/: Makefile  distinfo
ports/mail/minimalist/: Makefile  distinfo
ports/mail/xfmail/: Makefile
ports/net/: Makefile.inc
ports/net/bazar/: Makefile
ports/net/bpft/: Makefile  distinfo
ports/net/cnupm/: Makefile  distinfo
ports/net/dc_gui/: Makefile  distinfo
ports/net/eggdrop/: Makefile  distinfo
ports/net/freenet6/: Makefile  (+1 more)
remove/news/: TODO
remove/wwwportal/: TODO
src/a386/: .cvsignore  AUTHORS  INSTALL  PORTS  README  configure
src/ata/: GOALS  IMPLEMENTATION  TODO  install.sh  uninstall.sh
src/atactl/: atactl.8  atactl.c  atasmart.h
src/bcrelayd/: GNUmakefile  GNUmakefile.inc  Makefile  Makefile.inc  README
src/cnupm/: BSDosdefs.inc  Changelog  GNUmakefile  GNUmakefile.inc  GNUosdefs.inc  Makefile  Makefile.conf  Makefile.inc  README  install-sh
src/execwrap/: Makefile  execwrap.c
src/ffq/: LICENSE  README
src/giflogd/: Makefile  Makefile.FreeBSD  Makefile.OpenBSD  giflogd.c  pidfile.c
src/hideproc/: Makefile  README
src/if_acct/: Makefile  README
src/ipflow/: Makefile  README
src/ipstatd/: INSTALL  Makefile.in  TODO  configure.in
src/ipstatd/include/: autoconf.h.in  config.h
src/ipstatd/lib/: Makefile.in
src/ipstatd/lib/md/: Makefile.in  copyright  md5c.c  mdXhl.c
src/ipstatd/src/: Makefile  Makefile.in  TODO  challenge.c  daemon.c  dumpstat.c  extern.h  getaddr.c  ipchains.c  ipfil.c  ipstat.h  ipstatd.c  ipstatd.conf  ipstatd.h  logpcap.c  mydaemon.c  net.c  net.h  pflog.c
src/ircyka/: Makefile  README  TODO
src/mail.buhal/: Makefile  Makefile.inc  README  TODO  mail.buhal.c
src/nuBo/: Makefile  Makefile.inc  README
src/pgwrap/: Makefile  README  pgwrap.c  pgwrap.h
src/radio/: MAKEDEV.patch  Makefile  README  az.4  patch29  radio-minifaq.html  radio.4  radio.9  radioctl.1  radioctl.c  sf2r.4  sf4r.4
src/sbni/: INSTALL  Makefile  TODO
src/scripts/: chktypes  lesspipe  obsolete_files  pkg_chkfiles  pkg_clean  pkg_gensubdirlist
src/sshwatchd/: Makefile  README  sshwatchd.c
src/tunneld/: Makefile  Makefile.FreeBSD  Makefile.OpenBSD  README
src/xcyrillic/: LICENSE.txt
tr/: anlgform.html  index.html  recommend.html  status.html  variants.html
tr/translation/: Makefile  commit-list
www/: .cvsignore  .htaccess  STYLE  current.html  docs.html  donate.html  faq.html  header.html  index.html  irc.html  links.html  mail.html  news.html  obsdnews.html  openbsd.html  ports.html  projects.html  robots.txt  support.html
www/docs/: current.html  doc_header.html  howto-bluetooth.html  howto-bridge.html  howto-cyrillic.html  howto-gprs.html  howto-kernconf.html  howto-mkconf.html  howto-sendmail.html  howto-sysctl.html  https.html  index.html  ipf-mini.html  obsd-java.html  patch.html  php4.html  results.txt  rsync.html  ssh-tips.html  ssh.html  wire.html  wireless.html  x_openvpn.html
www/faq/: faq-cyrillic.html  index.html
www/files/: 8MB  Makefile  VMWARE  Xdefaults  Xmodmap  cm-anon.key  cm-anon.pem  config  csh.cshrc  csh.login  cvsrc  dot.twmrc  gtkrc  index.html  inputrc  ipf.rules  ipnat.rules  koi8-map.sh  nat.conf  openbsd.nlm  pf.conf  profile  twmrc  userChrome.css  vimrc  xorg-vm.conf  zshenv
www/keys/: form.asc  form.crt  mpech.asc  pdp11-ca.crt
www/news/: index.html
www/pgp/: cruz.asc  dfa.asc  form.asc  grange.asc  homyakov.asc  tm.asc
www/prog/: index.html
www/project/: cvsync.html  index.html  style.html
www/reviews/: index.html  obsd-java.html  rev_header.html
(+1328 files in other folders)
